# github-cli

./: .editorconfig  .pre-commit-config.yaml  pyproject.toml  setup.cfg
src/: main.py
